--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="gameArea"></div>
+    <script type="text/javascript" src="{{ url_for('static', filename='audioFix.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='rotator.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='gameAudio.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='stitchInTime.js') }}"></script>
