--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
-    <div id="gameArea"></div>
+    <div id="gameArea">
+        <div id="gameStatus"></div>
+    </div>
+    <script type="text/javascript" src="{{ url_for('static', filename='shims.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='domMods.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='audioFix.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='rotator.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='gameAudio.js') }}"></script>
