--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
     </div>
     <script type="text/javascript" src="{{ url_for('static', filename='shims.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='domMods.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='countdown.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='audioFix.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='rotator.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='gameAudio.js') }}"></script>
