Make a serverless version (files only)

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Stitch In Time</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="../static/style.css">
   </head>
   <body>
     <div id="gameArea">
         <div id="gameStatus"></div>
     </div>
-    <script type="text/javascript" src="{{ url_for('static', filename='shims.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='domMods.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='countdown.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='audioFix.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='rotator.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='gameAudio.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='stitchInTime.js') }}"></script>
+    <script type="text/javascript" src="../static/shims.js"></script>
+    <script type="text/javascript" src="../static/domMods.js"></script>
+    <script type="text/javascript" src="../static/countdown.js"></script>
+    <script type="text/javascript" src="../static/audioFix.js"></script>
+    <script type="text/javascript" src="../static/rotator.js"></script>
+    <script type="text/javascript" src="../static/gameAudio.js"></script>
+    <script type="text/javascript" src="../static/stitchInTime.js"></script>
   </body>
 </html>
