--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,7 @@ body {
   color: #ffffff;
   font-family: 'Eleven';
   margin: 0;
+  background-repeat: no-repeat;
 }
 
 #gameArea {
@@ -56,4 +57,35 @@ body {
 
 .success {
   color: #9EE22E
+}
+
+.score-table-wrapper {
+  display: flex;
+  width: 100%;
+  height: 50vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.score-table-wrapper table {
+  width: 50%;
+  line-height: 2.5rem;
+}
+
+.score-table-wrapper table thead {
+  font-size: 1.5rem;
+  box-shadow: 0px 0.125rem white;
+}
+
+.score-table-wrapper table tbody {
+  font-size: 1.5rem;
+}
+
+
+.player {
+  text-align: left;
+}
+
+.score {
+  text-align: right;
 }
