--- a/static/style.css
+++ b/static/style.css
@@ -89,3 +89,26 @@ body {
 .score {
   text-align: right;
 }
+
+#video-container, #judging-container, #button-container {
+  display: flex;
+  width: 100%;
+  height: 33vh;
+  justify-content: center;
+  align-items: center;
+}
+
+#judge-result {
+  text-align: center;;
+  font-size: 2rem;
+}
+
+
+button {
+  height: 4rem;
+  background: black;
+  border: .125rem solid white;
+  font-size: 1.5rem;
+  color: white;
+  font-family: Eleven;
+}
