--- a/templates/highscore.html
+++ b/templates/highscore.html
@@ -8,6 +8,8 @@
     <title>Pocket Racer – High Scores </title>
 </head>
 <body>
+    <img class="game-logo" src="{{ url_for('static', filename='pocketracer.webp') }}" alt="">
+    <p class="game-version"> v. 1.0</p>
     <div id="good-pocket-wrapper" class="score-table-wrapper">
         <table>
             <caption>Well-sewn pockets</caption>
