--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
+    <img class="game-logo" src="{{ url_for('static', filename='pocketracer.webp') }}" alt="">
+    <p class="game-version"> v. 1.0</p>
     <div id="gameArea">
         <div id="gameStatus"></div>
     </div>
