--- a/templates/roboJudge.html
+++ b/templates/roboJudge.html
@@ -8,6 +8,8 @@
     <title>Pocker Racer – Robo Judge</title>
 </head>
 <body>
+    <img class="game-logo" src="{{ url_for('static', filename='pocketracer.webp') }}" alt="">
+    <p class="game-version"> v. 1.0</p>
     <div id="video-container">
 
     </div>
