--- a/templates/roboJudge.html
+++ b/templates/roboJudge.html
@@ -21,12 +21,15 @@
         <button id="bad-pocket">Sub-standard pocket</button>
         <button id="train-model">Train robo-judge</button>
         <button id="save-model">Save knowledge</button>
-        <button id="load-model">Load knowledge</button>
+        <!--button id="load-model">Load knowledge</button-->
         <input id="load-file" type="file" style="display:none" />
     </div>
     <script src="{{ url_for('static', filename='p5.min.js') }}"></script>
     <script src="{{ url_for('static', filename='ml5.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='sketch.js') }}"></script>
+    <script>
+        let pocketModel = "{{ url_for('static', filename='model.json') }}";
+    </script>
+    <script src="{{ url_for('static', filename='sketch.js') }}?1"></script>
 
 </body>
 </html>
