--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#0d0d0d">
     <meta name="msapplication-TileColor" content="#0d0d0d">
-    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest')}}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?2">
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest')}}?10">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?10">
   </head>
   <body>
     <div id="gameArea">
@@ -21,14 +21,15 @@
     </div>
     <div id="gameControlArea">
         <button id="new-game">New game</button>
+        <button id="connect-usb">Connect device</button>
     </div>
-    <script type="text/javascript" src="{{ url_for('static', filename='swLoader.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='shims.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='domMods.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='countdown.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='rotator.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='gameAudio.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='stitchInTime.js') }}?5"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='audioFix.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='swLoader.js') }}?10"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='shims.js') }}?10"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='domMods.js') }}?10"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='countdown.js') }}?10"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='rotator.js') }}?10"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='gameAudio.js') }}?10"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='stitchInTime.js') }}?10"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='audioFix.js') }}?10"></script>
   </body>
 </html>
