--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#0d0d0d">
     <meta name="msapplication-TileColor" content="#0d0d0d">
-    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest')}}?10">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?10">
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest')}}?12">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?12">
   </head>
   <body>
     <div id="gameArea">
@@ -21,15 +21,17 @@
     </div>
     <div id="gameControlArea">
         <button id="new-game">New game</button>
+        <button id="start-measure">Measure new task</button>
+        <button id="stop-measure">Finish measure</button>
         <button id="connect-usb">Connect device</button>
     </div>
-    <script type="text/javascript" src="{{ url_for('static', filename='audioFix.js') }}?10"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='swLoader.js') }}?10"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='shims.js') }}?10"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='domMods.js') }}?10"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='countdown.js') }}?10"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='rotator.js') }}?10"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='gameAudio.js') }}?10"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='stitchInTime.js') }}?10"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='audioFix.js') }}?12"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='swLoader.js') }}?12"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='shims.js') }}?12"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='domMods.js') }}?12"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='countdown.js') }}?12"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='rotator.js') }}?12"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='gameAudio.js') }}?12"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='stitchInTime.js') }}?12"></script>
   </body>
 </html>
